styles/Bulleting.module.scss
$container-colour: rgb(219, 219, 219);
$character-colour: rgb(149, 147, 255);
$bullet-colour: rgb(255, 108, 89);
$hp-colour: rgb(216, 74, 74);
$speed-colour: #40a3ff;
$za-warudo-colour: rgb(137, 133, 197);
$za-warudo-effect: #55515b31;
$shrink-colour: #73359c;
$slow-colour: rgb(182, 80, 66);
$topscore-colour: #ffc977;

.lifeIcon {
  color: $hp-colour;
  width: var(--size);
  height: var(--size);
}

.speedIcon {
  color: $speed-colour;
  width: var(--size);
  height: var(--size);
}

.zaWarudoIcon {
  color: $za-warudo-colour;
  width: var(--size);
  height: var(--size);
}

.shrinkIcon {
  color: $shrink-colour;
  width: var(--size);
  height: var(--size);
}

.slowIcon {
  color: $slow-colour;
  width: var(--size);
  height: var(--size);
}

.stats {
  padding: 0.25em 1em;
  margin: 1em 3em;
  display: flex;
  justify-content: space-around;
  align-items: center;

  .lives {
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    gap: 0.5em;
    width: 4rem;
  }

  .score {
    font-size: 1.5rem;
    border-radius: 0.5em;
    padding: 0.25em 0.75em;
    display: flex;
    align-items: center;
    gap: 0.5em;
    width: 4rem;

    span {
      font-weight: 600;
    }
  }
}

.gameContainer {
  background: $container-colour;
  margin: auto;
  width: max(80%, 600px);
  height: max(80vh, 300px);
  position: relative;
  overflow: hidden;

  .character {
    width: var(--size);
    height: var(--size);
    background: $character-colour;
    position: absolute;
    left: calc(50% - 5px);
    top: calc(50% - 5px);
    animation: spin 1s linear infinite;
  }

  .character.hit {
    animation: spin 1s linear infinite, blink var(--iframe-duration) linear;
  }

  .bullet {
    width: var(--size);
    height: var(--size);
    background: $bullet-colour;
    border-radius: 50%;
    position: absolute;
    left: var(--left);
    top: var(--top);
  }

  .buff {
    width: var(--size);
    height: var(--size);
    position: absolute;
    left: var(--left);
    top: var(--top);
  }

  .zaWarudoEffect {
    position: absolute;
    left: var(--left);
    top: var(--top);
    width: 0;
    height: 0;
    background-color: $za-warudo-effect;
    filter: blur(50px);
    z-index: 1;
    animation: expand 500ms linear forwards, blink 1s linear 4s;
  }
}

.gameOverContainer {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgb(0, 0, 0, 0.5);
  z-index: 10;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2em;

  .gameOver {
    width: fit-content;
    display: flex;
    align-items: flex-end;
    gap: 2em;

    .gameOverText {
      color: var(--white);
      font-size: 3rem;
      font-weight: 500;
    }

    .topScore {
      width: fit-content;
      font-size: 1.5rem;
      font-weight: 400;
      border-radius: 0.75rem;
      background-color: $topscore-colour;
      padding: 0.25em 0.75em;
      margin-bottom: 5px;

      span {
        font-weight: 600;
      }
    }
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes blink {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  75% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes expand {
  0% {
    left: var(--left);
    top: var(--top);
    width: 0;
    height: 0;
  }
  100% {
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }
}

